--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     margin: 0;
     flex-direction: column;
 }
@@ -22,9 +21,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 600px;
-    height: 600px;
-    margin: 2em;
+    margin: 1vh;
 }
 
 @media (max-width: 600px) {
@@ -33,8 +30,6 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 400px;
-        height: 400px;
         margin: 2em;
     }
 }
@@ -266,10 +261,10 @@ body {
     border-radius: 5px;
     outline: 0;
     border: 0;
-    height: 4em;
+    height: 8vh;
     width: 60%;
     max-width: 20em;
-    margin: .7em 0 0 0;
+    margin: 1vh 0 1vh 0;
     font-family: monospace;
     font-size: 2em;
     font-weight: 800;
